--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -1,7 +1,6 @@
 <layout>
 
     <data>
-
         <variable
             name="event"
             type="hr.foi.air.data.beans.EventBean" />
@@ -13,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context="hr.foi.air.sportloc.fragments.EventDetailsFragment">
-
 
         <ScrollView
             android:id="@+id/scrollView"
@@ -37,79 +35,76 @@
                 android:paddingStart="8dp"
                 android:scrollbars="vertical">
 
-                <EditText
-                    android:id="@+id/etTitle"
-                    style="@style/EditTextDisabled"
+                <TextView
+                    android:id="@+id/tvTitle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     android:gravity="start"
                     android:text="@{event.title}"
                     android:textColor="#000000"
                     android:textSize="36sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <EditText
-                    android:id="@+id/etLocation"
-                    style="@style/EditTextDisabled"
+                <TextView
+                    android:id="@+id/tvSportLocation"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="52dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="2dp"
-                    android:text="@{event.location}"
+                    android:text='@{event.sport + ", " + event.location}'
                     android:textColor="#000000"
                     android:textSize="24sp"
+                    style="@style/BoldText"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etTitle" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
                 <View
                     android:id="@+id/dvdHorizontal"
-                    android:layout_width="0dp"
-                    android:layout_height="2dp"
+                    style="@style/HorizontalLine"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:background="#888888"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etLocation" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvSportLocation" />
 
                 <TextView
-                    android:id="@+id/tvSpace"
+                    android:id="@+id/tvCapacity"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
+                    android:text='@{"Kapacitet sudionika: " + event.currentCapacity + "/" + event.maxCapacity}'
                     android:textColor="#000000"
                     android:textSize="18sp"
-                    android:textStyle="bold"
+                    style="@style/BoldText"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/dvdHorizontal" />
 
                 <TextView
-                    android:id="@+id/tvCreatorLabel"
+                    android:id="@+id/lblCreator"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:text="@string/event_details_made_by"
+                    android:text="@string/event_details_creator"
                     android:textColor="#000000"
                     android:textSize="18sp"
-                    android:textStyle="bold"
+                    style="@style/BoldText"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvSpace" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvCapacity" />
 
                 <TextView
-                    android:id="@+id/tvCreator"
+                    android:id="@+id/tvCreatorUserName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
@@ -119,23 +114,23 @@
                     android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvCreatorLabel"
-                    app:layout_constraintTop_toBottomOf="@+id/tvSpace" />
+                    app:layout_constraintStart_toEndOf="@+id/lblCreator"
+                    app:layout_constraintTop_toBottomOf="@+id/tvCapacity" />
 
                 <TextView
-                    android:id="@+id/tvAddressLabel"
+                    android:id="@+id/lblAddress"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:text="@string/event_details_address"
                     android:textColor="#000000"
                     android:textSize="18sp"
-                    android:textStyle="bold"
+                    style="@style/BoldText"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvCreator" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvCreatorUserName" />
 
-                <EditText
-                    android:id="@+id/etAddress"
+                <TextView
+                    android:id="@+id/tvAddress"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
@@ -144,63 +139,61 @@
                     android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvAddressLabel"
-                    app:layout_constraintTop_toBottomOf="@+id/tvCreator"
-                    style="@style/EditTextDisabled" />
+                    app:layout_constraintStart_toEndOf="@+id/lblAddress"
+                    app:layout_constraintTop_toBottomOf="@+id/tvCreatorUserName" />
 
                 <TextView
-                    android:id="@+id/tvDateLabel"
+                    android:id="@+id/lblStartTime"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:text="@string/event_details_date"
+                    android:text="@string/event_details_start_time"
                     android:textColor="#000000"
                     android:textSize="18sp"
-                    android:textStyle="bold"
+                    style="@style/BoldText"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etAddress" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvAddress" />
 
-                <EditText
-                    android:id="@+id/etDate"
+                <TextView
+                    android:id="@+id/tvStartTime"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="4dp"
+                    android:text="@{event.startTime}"
                     android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvDateLabel"
-                    app:layout_constraintTop_toBottomOf="@+id/etAddress"
-                    style="@style/EditTextDisabled" />
+                    app:layout_constraintStart_toEndOf="@+id/lblStartTime"
+                    app:layout_constraintTop_toBottomOf="@+id/tvAddress" />
 
                 <TextView
-                    android:id="@+id/tvTimeLabel"
+                    android:id="@+id/lblEndTime"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:text="@string/event_details_time"
+                    android:text="@string/event_details_end_time"
                     android:textColor="#000000"
                     android:textSize="18sp"
-                    android:textStyle="bold"
+                    style="@style/BoldText"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvDateLabel" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvStartTime" />
 
-                <EditText
-                    android:id="@+id/etTime"
+                <TextView
+                    android:id="@+id/tvEndTime"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="4dp"
-                    android:text='@{event.startTime +" - "+  event.endTime}'
+                    android:text="@{event.endTime}"
                     android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvTimeLabel"
-                    app:layout_constraintTop_toBottomOf="@+id/etDate"
-                    style="@style/EditTextDisabled" />
+                    app:layout_constraintStart_toEndOf="@+id/lblEndTime"
+                    app:layout_constraintTop_toBottomOf="@+id/tvStartTime" />
 
                 <TextView
-                    android:id="@+id/tvDescriptionLabel"
+                    android:id="@+id/lblDescription"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
@@ -209,13 +202,13 @@
                     android:text="@string/event_details_description"
                     android:textColor="#000000"
                     android:textSize="18sp"
-                    android:textStyle="bold"
+                    style="@style/BoldText"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etTime" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvEndTime" />
 
-                <EditText
-                    android:id="@+id/etDescription"
+                <TextView
+                    android:id="@+id/tvDescription"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
@@ -225,8 +218,7 @@
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel"
-                    style="@style/EditTextDisabled" />
+                    app:layout_constraintTop_toBottomOf="@+id/lblDescription" />
 
                 <Button
                     android:id="@+id/btnJoinLeaveRequest"
@@ -241,13 +233,13 @@
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp"
-                    android:textStyle="bold"
+                    style="@style/BoldText"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etDescription" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
                 <TextView
-                    android:id="@+id/tvMapLabel"
+                    android:id="@+id/lblMap"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
@@ -273,7 +265,7 @@
                     android:visibility="invisible"
                     app:layout_constraintBottom_toTopOf="@+id/dvdHorizontal"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/etLocation"
+                    app:layout_constraintStart_toEndOf="@+id/tvSportLocation"
                     app:srcCompat="@drawable/ic_tick" />
 
 
@@ -282,19 +274,20 @@
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="4dp"
                     android:background="#00000000"
                     app:layout_constraintEnd_toEndOf="parent"
 
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvMapLabel"
+                    app:layout_constraintTop_toBottomOf="@+id/lblMap"
                     app:uiCompass="true"
 
                     app:uiZoomControls="true"
                     app:zOrderOnTop="true"
-                    tools:context="hr.foi.air.sportloc.EventDetailsActivity" />
+                    tools:context="hr.foi.air.sportloc.EventDetailsActivity"
+                    tools:layout="@layout/fragment_event_details" />
 
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
